# labrat

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-CN.md  program.md  pyproject.toml  requirements.txt
.agents/skills/labrat-operator/: SKILL.md
docs/: ARCHITECTURE.md  ASSESSMENT.md  AUTONOMY.md  DEEP_RESEARCH.md  LONG_HORIZON.md  MODEL_GUIDANCE.md  PROFILES.md  WORKPLAN.md  data-splitting.md  domains.md  economics.md  getting-started.md  labrats-visual-guide.md  runners.md
examples/nlp-sentiment/: .gitignore  README.md  branches.yaml  constitution.md  dead_ends.md  requirements.txt
examples/nlp-sentiment/research_lab/: AGENTS.md  CLAUDE.md  branches.yaml  consolidation_agent.md  (+16 more)
labrat/: __init__.py  cli.py
profiles/transformer-arch/: branches.yaml  dead_ends.md  evaluation.yaml  requirements.txt  research_brief.md  research_sources.md  runtime.yaml
scripts/: allocator.py  bootstrap.py  evaluator.py  judge.py  lab_core.py  new_lab.py  operator_helper.py  pareto.py  research_scout.py  runtime.py  tree_render.py
templates/: AGENTS.md  CLAUDE.md  branches.yaml  consolidation_agent.md  constitution.md  crossover_worker.md  dashboard.html  dead_ends.md  evaluation.yaml  expansion_scout.md  frame_break.md  implementation_audit.md  mutation_worker.md  orchestrator.md  probe_worker.md  research_brief.md  research_scout.md  research_sources.md  run_experiment.py  runtime.yaml  tree_designer.md
templates/agent_prompts/: README.md  claude_code.md  codex.md
templates/coordination/: prioritized_tasks.md  workspace_map.md
(+56 files in other folders)
